# All-For-One

./: .gitignore  Cargo.toml  README.md  config.toml.example
docs/: structure.md
src/: main.rs
src/api/: mod.rs  router.rs  server.rs
src/api/response/: error.rs
src/api/response/types/: auth_url.rs  error.rs  mod.rs  token.rs
src/api/state/: init.rs  types.rs
src/api/state/types/: app.rs  jwt_issuer.rs  mod.rs  oauth_client.rs
src/api/types/: cookie.rs  jwt.rs  jwt_claim.rs  jwt_claim_tests.rs  mod.rs  session.rs  session_tests.rs
src/api/v1/: jwks.rs  mod.rs  oauth.rs
src/config/: mod.rs  read.rs  tests.rs  types.rs  validation.rs
src/db/: connect.rs  mod.rs
src/db/repo/: users.rs
src/entity/: mod.rs  users.rs  users_tests.rs
src/memcached/: connect.rs  mod.rs  repo.rs  types.rs  types_tests.rs
src/provider/: github.rs  mod.rs  types.rs
src/provider/types/: config.rs  idp.rs  idp_tests.rs  idp_uid.rs  idp_uid_tests.rs  mod.rs
src/session/: mod.rs
src/utils/: error.rs  error_tests.rs  logger.rs  logger_tests.rs  mod.rs  types.rs
