[package]
name = "AllForOne"
version = "0.1.0"
edition = "2024"

[dependencies]
# runtime
tokio = { version = "1.46.1", features = ["full"] }

# client
async-memcached = "0.5.0"
deadpool = { version = "0.12.2", features = ["rt_tokio_1"] }
deadpool-memcached = "0.3.2"
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
] }

# logger
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# error
thiserror = "2.0.12"
anyhow = "1.0.98"

# http
axum = "0.8.4"
reqwest = { version = "0.12.22", features = ["json"] }
openidconnect = "4.0.1"
oauth2 = "5.0.0"

# format
jsonwebtoken = "9.3.1"
sonic-rs = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v7", "serde"] }
toml = "0.9.2"
url = "2.5.4"
